--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6,16 +6,64 @@ html {
 
 /* header ------------------------------------------------------------------------------ */
 
+.header {
+	margin-bottom: 20px;
+}
+
 .header__body {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
 
 .header__title {
+	margin-bottom: 20px;
 	font-size: 24px;
 	font-weight: bold;
 	text-align: center;
 }
+
+.menu-header {
+	display: flex;
+	justify-content: center;
+}
+
+.menu-header__list li:not(:last-child) {
+	margin-bottom: 10px;
+}
+
+.menu-header__link {
+	position: relative;
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.menu-header__link_active::before,
+.menu-header__link_active::after {
+	content: '';
+	position: absolute;
+	top: 43%;
+	left: -25px;
+	height: 3px;
+	width: 15px;
+	background-color: #bfbfbf;
+	transform-origin: bottom right;
+	transform: rotate(30deg);
+}
+
+.menu-header__link_active::after {
+	transform-origin: top right;
+	transform: rotate(-30deg);
+}
+
+.menu-header__text {
+	transition: color 0.2s;
+}
+
+.menu-header__text:hover {
+	color: #6A5ACD;
+}
+
+
 
 /* main -------------------------------------------------------------------------------- */
 
@@ -23,84 +71,8 @@ html {
 	padding-bottom: 50px;
 }
 
-.main__item:not(:last-child) {
-	margin-bottom: 50px;
-}
-
 .task {
 	min-height: 100vh;
-}
-
-.task__header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.task__title {
-	margin-right: 30px;
-
-	font-size: 20px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.menu {
-	display: flex;
-	flex-direction: column;
-}
-
-.menu__item:not(:last-child) {
-	margin-bottom: 10px;
-}
-
-.menu__link {
-	position: relative;
-	display: block;
-	width: 34px;
-	height: 15px;
-}
-
-.menu__link::before,
-.menu__link::after {
-	content: '';
-	position: absolute;
-	top: 5px;
-	width: 20px;
-	height: 4px;
-
-	border-radius: 3px;
-	background-color: lightgray;
-
-	transition: background-color 0.3s;
-}
-
-.menu__link-bottom::before {
-	left: 0;
-	transform: rotate(30deg);
-}
-
-.menu__link-bottom::after {
-	right: 0;
-	transform: rotate(-30deg);
-}
-
-.menu__link-top::before {
-	left: 0;
-	transform: rotate(-30deg);
-}
-
-.menu__link-top::after {
-	right: 0;
-	transform: rotate(30deg);
-}
-
-.menu__link:hover::before,
-.menu__link:hover::after {
-	background-color: #a6a6a6;
 }
 
 .task__body {
